# TensorflowLearning

./: README.md  mnist.py  opencv.py  pyproject.toml  titanic_survival.py
src/: func_model_multi_input.py  func_model_multi_output.py  imdb.py  iris.py  main.py  mnist.py  nltkk.py  opencv.py  simple_RNN.py  stock.py  tensor_board.py  titanic_survival.py
static/logs/train/: events.out.tfevents.1755696734.MASTER.6008.0.v2  events.out.tfevents.1755696837.MASTER.20252.0.v2
static/logs/validation/: events.out.tfevents.1755696839.MASTER.20252.1.v2
