[project]
name = "TensorflowLearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tensorflow>=2.20.0",
]
[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"
